--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -3,8 +3,8 @@
 <h2>My top 3 movies of all-time.</h2>
 <hr>
 <h3>Finding Nemo</h3>
-<p>I love this movie because nemo is awesome and it has a good message</p>
-<h3>Saw</h3>
-<p>A good scary movie that has twists that I enjoyed</p>
+<p>I love this movie because the determination Marlin has to find his son resonates with me because it shows he's willing to do anything to save his son.</p>
+<h3>Lion King</h3>
+<p>Lion King is one of the classics of Disney and it takes themes from Hamlet. I really enjoyed this movie and it used to be my number 1 before Finding Nemo came along. </p>
 <h3>Beauty and The Beast</h3>
-<p>I love belle and beasts connection and the way she loves him</p>
+<p>The theme of love is what really caputered my attention here and it showed me that anyone can change because as we see the Beast is a bad person until Belle helps him change his ways.</p>
