--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -8,4 +8,4 @@
     <li>Presents</li>
 </ul>
 <h2>This is where you need to go</h2>
-<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Click for location</a>
+<a href="https://www.google.com/maps/place/Disneyland+Park/@33.8120918,-117.9215491,17z/data=!3m1!4b1!4m6!3m5!1s0x80dcd7d12b3b5e6b:0x2ef62f8418225cfa!8m2!3d33.8120918!4d-117.9189742!16zL20vMDJmenM?entry=ttu">Click for location</a>
