--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -8,4 +8,4 @@
     <li>Presents</li>
 </ul>
 <h2>This is where you need to go</h2>
-<a href="https://www.google.com/maps/place/Disneyland+Park/@33.8120918,-117.9215491,17z/data=!3m1!4b1!4m6!3m5!1s0x80dcd7d12b3b5e6b:0x2ef62f8418225cfa!8m2!3d33.8120918!4d-117.9189742!16zL20vMDJmenM?entry=ttu">Click for location</a>
+<a href="">Click for location</a>
