--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -8,4 +8,4 @@
     <li>Presents</li>
 </ul>
 <h2>This is where you need to go</h2>
-<a href="">Click for location</a>
+<a href="https://www.google.com/maps/@33.8124962,-117.9190773,3a,75y,33h,94.87t/data=!3m7!1e1!3m5!1sPdoMDDZgF7s1tZJD5nUwCg!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fpanoid%3DPdoMDDZgF7s1tZJD5nUwCg%26cb_client%3Dmaps_sv.tactile.gps%26w%3D203%26h%3D100%26yaw%3D209.31886%26pitch%3D0%26thumbfov%3D100!7i13312!8i6656?entry=ttu">Click for location</a>
